# lillydap

./: .gitignore  CHANGELOG.MD  CMakeLists.txt  CONTROLS.MD  FILTERS.MD  INSTALL.MD  LICENSE  LICENSE.MD  LillyDAP.pc.in  Makefile  PYTHON.MD  README.MD  TODO  USAGE.MD  UTILITIES.MD
cmake/: ConfigVersion.cmake.in  FindGperf.cmake  MacroCreateConfigFiles.cmake  MacroGitVersionInfo.cmake
contrib/cmake/: LillyDAPConfig.cmake.in
contrib/pkgconfig/: lillydap.pc.in
import/: CMakeLists.txt  Makefile
include/lillydap/: api.h  control.h  mem.h  queue.h
lib/: CMakeLists.txt  Makefile  codeop.c  derbuf.c  dermsg.c  mem.c  msgcode.c  msgop.c  msgop.gperf  opswi.c  queue.c  rfc1823.c  sillymem.c
pix/: parser-stack.graphml  stack-flexibility.graphml
python/: CMakeLists.txt  README.MD  _lillydap.c  lillydap.py  make_opsize_h.sh  setup.py.in  test.py  tmp_sillymem.c
test/: CMakeLists.txt  CMatch.c  Makefile  README.MD  TODO  ldap-mitm.c  lillydump.c  lillygetprint.c  lillypass.c  stampede.c
test/ldap/: 001-search-resentry-rejected.hex  002-search-rejected-resdone.hex  100-bind-request.hex  100-search-succeeded.tcpdump.pcapng  101-bind-response.hex  102-search-request.hex  103-search-resentry.hex  104-search-resref.hex  105-search-resdone.hex  106-unbind-request.hex  map.sh
